# AC.Rogue-Lang-Patch

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
cmake/: hooking.cmake  injector.cmake  mINI.cmake
data/: patch_config.ini
src/: dllmain.cpp
src/proxy/: proxy.cpp  proxy.hpp  shared.hpp
src/proxy/version/: version.cpp  version.def  version.hpp
tools/LocLangGenerator/: go.mod  go.sum  localization.lang.struct.hexpat  main.go
